--- a/angular/powerLevels/src/app/app.component.html
+++ b/angular/powerLevels/src/app/app.component.html
@@ -1,26 +1,27 @@
 
 <div id="powerComponent">
-    <form (submit)="onsubmit()">
+    <form (submit)="onsubmit()" #myForm="ngForm">
 
       <h1>
       Initial power level:
 
-      <input type="text" name="char.inPower"
-      [(ngModel)] = "char.inPower"
-      #inPower="ngModel"
+      <input type="text" name="inPower"
+      [(ngModel)] = "inPower"
+      required
+      #powerInput="ngModel"
       minlength="1"
       maxlength="3"
       pattern='[1-9][0-9]?$|^100'
       value=''
       >
-      <span *ngIf="inPower.valid">
+      <span *ngIf="powerInput.valid && myForm.valid">
         <input type="submit" name="" onclick="javascript:void(0)" value="Calculate Powers">
     </span>
   </h1>
 
   <p>
-      <span *ngIf="!inPower.valid && char.inPower != '' ">
-        <span    [hidden]="inPower.hasError('required')">   input value between 0 and 100</span>
+      <span *ngIf="!powerInput.valid && inPower != '' ">
+        <span [hidden]="inPower.hasError('required')">   input value between 0 and 100</span>
          <span [hidden]="!inPower.hasError('pattern')">Only number allowed between 0 and 100</span>
       </span>
       <!-- {{inPower.errors | json}} -->
@@ -29,29 +30,29 @@
 
       {{calculate_message}}
 
-  {{char.inPower}}
+  {{inPower}}
     </form>
 
 
-<app-human [getinPower]='char.inPower'>
+<app-human [getinPower]='inPower_'>
 </app-human>
 
-<app-saiyan [getinPower]='char.inPower'>
+<app-saiyan [getinPower]='inPower_'>
 </app-saiyan>
 
-<app-super-saiyan [getinPower]='char.inPower'>
+<app-super-saiyan [getinPower]='inPower_' >
 </app-super-saiyan>
 
-<app-super-saiyan-three [getinPower]='char.inPower'>
+<app-super-saiyan-three [getinPower]='inPower_'>
 </app-super-saiyan-three>
 
 
 
-<app-super-saiyan-four [getinPower]='char.inPower'>
+<app-super-saiyan-four [getinPower]='inPower_'>
 </app-super-saiyan-four>
 
 
-<app-super-saiyan-five [getinPower]='char.inPower' (myEvent)='invoce($event)'>
+<app-super-saiyan-five [getinPower]='inPower_' (myEvent)='invoce($event)'>
 </app-super-saiyan-five>
 
 
